# myclo-platform

./: .env.example  .gitignore  README.md
backend/: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 33a56fea63ab_initial_schema_fresh_start.py  4c9978c514cd_add_region_column_to_daily_weather.py  4df63da93268_revise_daily_weather_table.py  9e4180a97464_initial_schema.py  a1b2c3d4e5f6_change_user_id_to_uuid.py  c6f1f41c8389_extend_todays_pick_model.py  cb94e87dc718_add_todays_pick_table.py  cb98f757fcb4_add_daily_weather_table.py
backend/app/: database.py  main.py
backend/app/ai/: __init__.py
backend/app/ai/clients/: __init__.py  gemini_client.py  nano_banana_client.py
backend/app/ai/nodes/: __init__.py  chat_nodes.py  (+3 more)
backend/app/batch/: __init__.py  weather.py
backend/app/core/: auth.py  config.py  constants.py  health.py  regions.py  schemas.py  security.py
backend/app/llm/: todays_pick_service.py
backend/app/storage/: memory_store.py
backend/app/utils/: helpers.py  json_parser.py  mannequin_manager.py  model_init.py  response_helpers.py  validators.py
backend/docs/: .gitkeep  index.md
backend/docs/api/: auth.md  extraction.md  recommendation.md  wardrobe.md  weather-api.md
backend/docs/architecture/: .gitkeep  langgraph-flows.md  weather-batch.md
backend/docs/development/: .gitkeep  rules.md
backend/docs/guides/: vscode-debugging.md
backend/site/: 404.html  index.html  sitemap.xml
backend/site/getting-started/: index.html
backend/site/search/: search_index.json
backend/tests/: README.md  conftest.py  test_auth.py  test_health.py  test_user.py  test_wardrobe.py
backend/tests/unit/: test_image_processing.py  test_validators.py
(+97 files in other folders)
