[project]
name = "backend"
version = "0.1.0"
description = "Backend API server (FastAPI/Azure Functions)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.7",
    "langgraph>=0.0.1",
    "langchain>=0.1.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "aiohttp>=3.13.3",
    "google-auth>=2.0.0",
    "google-cloud-aiplatform>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=7.0.0",
    "debugpy>=1.8.19",
]
